Changelog for Poi
=================


1.3 (unreleased)
----------------

- Moved fully to GenericSetup.
  [maurits]

- Added minimum versions for AddRemoveWidget and DataGridField in
  setup.py, to make sure we get versions that are compatible with
  Plone 4, and that we have an AddRemoveWidget version with a
  GenericSetup profile.
  [maurits]

- Removed old BTrees migration code for the trackers.
  [maurits]

- Use zope.i18n.translate instead the the no longer existing
  GlobalTranslationService.
  [maurits]

- Get rid of old style zope2 interfaces, which no longer exist in Zope
  2.12.
  [maurits]

- Cleaned up code that was meant for PoiResponses.  The class itself
  is still there for migration.  [maurits]


1.2.7 (2009-10-24)
------------------

- Some styling changes: adding a few classes and ids, and loading
  Poi.css in the issue search form.  With thanks to Lars Löwenadler
  for some hints here.
  [maurits]

- Added permission 'Poi: Edit response' and protect the edit button of
  responses with that permission.  The creator (Owner) of an issue has
  this permission when the tracker is in the open or restricted state
  and not in the protected or closed state.
  [maurits]

- Do not give Owner the Add Issue/Response permissions in a closed
  tracker.
  [maurits]


1.2.6 (2009-09-06)
------------------

- Added upgrade step to make sure all the tracker manager actually
  have the Manager role.
  [maurits]

- Added tracker workflow state 'protected'.  Basically Readers can
  read, Editors can edit and Contributors can contribute.  Anonymous
  cannot see anything.
  Implements http://plone.org/products/poi/issues/181
  [maurits]

- Issue workflow: acquire permission settings of 'Modify portal
  content' from higher level: when you can edit a tracker you can edit
  its issues as well.
  [maurits]

- Protect the edit button of an issue with the 'Manage portal content'
  permission instead of the non-existing 'Manage Portal Content' with
  capital letters...