@@ -1,3 +1,0 @@
-[actions]
-action.success=redirect_to_action:string:view
-action.failure=traverse_to_action:string:edit
